--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^4.3.2+2
   # flutter_session: ^0.1.1
   image_picker: ^0.6.7+17
+  mime: ^0.9.7
   shared_preferences: ^0.5.12+4
   fluttertoast: ^7.1.1
 
