--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   mime: ^0.9.7
   shared_preferences: ^0.5.12+4
   fluttertoast: ^7.1.1
+  eva_icons_flutter: ^2.0.1
 
 dev_dependencies:
   flutter_test:
