--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   http: ^0.12.2
   provider: ^4.3.2+2
   # flutter_session: ^0.1.1
+  google_maps_flutter: ^1.2.0
   image_picker: ^0.6.7+17
   mime: ^0.9.7
   dio: ^3.0.10
