--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   day_night_switch: ^0.0.2+1
   dotted_border: ^1.0.5
   sqflite: ^1.3.2+3
+  flutter_khalti: ^1.0.0
   flutter_svg: ^0.19.1 #it helps us to use SVG
 
 dev_dependencies:
