--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   image_picker: ^0.6.7+17
   mime: ^0.9.7
   dio: ^3.0.10
+  intl: ^0.16.1
   flutter_local_notifications: ^1.4.4+2
   shared_preferences: ^0.5.12+4
   fluttertoast: ^7.1.1
