--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   # flutter_session: ^0.1.1
   google_maps_flutter: ^1.2.0
   image_picker: ^0.6.7+17
+  carousel_slider: ^3.0.0
   mime: ^0.9.7
   dio: ^3.0.10
   intl: ^0.16.1
