Project name changed along with app launcher icon

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,12 @@ allprojects {
     }
 }
 
+allprojects {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+    }
+}
+
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
