--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.simpleApi"
-xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.simpleApi" xmlns:tools="http://schemas.android.com/tools">
   <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
@@ -9,7 +8,7 @@ xmlns:tools="http://schemas.android.com/tools">
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
   <uses-permission android:name="android.permission.VIBRATE" />
 
-  <application android:name="io.flutter.app.FlutterApplication" android:requestLegacyExternalStorage="true" android:label="simpleApi" android:icon="@mipmap/ic_launcher" tools:replace="android:label">
+  <application android:name="io.flutter.app.FlutterApplication" android:requestLegacyExternalStorage="true" android:label="DentalHome" android:icon="@mipmap/ic_launcher" tools:replace="android:label">
     <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyCp0HvMSJWz3xAbwKE9IuDMf-ypr7LZL0s" />
     <activity android:name=".MainActivity" android:launchMode="singleTop" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize" android:showWhenLocked="true" android:turnScreenOn="true">
       <!-- Specifies an Android theme to apply to this Activity as soon as
