--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   dotted_border: ^1.0.5
   sqflite: ^1.3.2+3
   flutter_khalti: ^1.0.0
+  url_launcher: ^5.7.10
   flutter_svg: ^0.19.1 #it helps us to use SVG
 
 dev_dependencies:
