--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
   sqflite: ^1.3.2+3
   flutter_khalti: ^1.0.0
   url_launcher: ^5.7.10
+  # firebase_messaging: ^5.0.2
+  # firebase_auth: ^0.11.1+6
+  firebase_messaging: ^6.0.16
+  firebase_core: ^0.7.0
+  # firebase_core: ^0.4.0
   flutter_svg: ^0.19.1 #it helps us to use SVG
 
 dev_dependencies:
